--- a/index.html
+++ b/index.html
@@ -3,9 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close"
+    />
     <link rel="stylesheet" href="styles/main.css" />
     <script src="scripts/main.js" defer></script>
     <title>Habit Tracker</title>
   </head>
-  <body></body>
+  <body>
+    <section class="create_new_habit">
+      <div class="habit_header">
+        <span class="material-symbols-outlined"> close </span>
+        <h1 class="create_habit">Create New Habit</h1>
+      </div>
+      <div class="habit_properties_container">
+        <div class="habit_name">
+          <h4>Habit Name</h4>
+          <input
+            type="text"
+            name="Habit Name"
+            id="habitName"
+            placeholder="Habit Name"
+          />
+        </div>
+        <div class="icon_collection">
+          <div class="icons_header">
+            <h4 class="icons_title">Icon</h4>
+            <p class="all_icons">View All</p>
+          </div>
+          <div class="color_grid">
+            <span class="icon_item"></span>
+            <span class="icon_item"></span>
+            <span class="icon_item"></span>
+            <span class="icon_item"></span>
+            <span class="icon_item"></span>
+          </div>
+        </div>
+        <div class="color_collection">
+          <!-- create a color grid 5x3 -->
+        </div>
+        <div class="repeat_date">
+          <div class="time_header">
+            <h4 class="repeat_title">Repeat</h4>
+          </div>
+          <div class="time_filter_check">
+            <div class="time_filter daily">Daily</div>
+            <div class="time_filter weekly">Weekly</div>
+            <div class="time_filter monthly">Monthly</div>
+          </div>
+        </div>
+        <div class="specific_days">
+          <div class="days">
+            <h4 class="days_title">On these day</h4>
+            <div class="days_check">
+              <p>All day</p>
+              <input type="checkbox" name="All day" id="" />
+            </div>
+          </div>
+          <div class="week_days">
+            <span class="Sun each_day">S</span>
+            <span class="Mon each_day">M</span>
+            <span class="Tue each_day">T</span>
+            <span class="Wed each_day">W</span>
+            <span class="Thu each_day">T</span>
+            <span class="Fri each_day">F</span>
+            <span class="Sat each_day">S</span>
+          </div>
+        </div>
+        <div class="daily_times">
+          <div class="daily_times_header">
+            <h4 class="daily_times_title">Do it at:</h4>
+          </div>
+          <div class="daily_filter_check">
+            <div class="daily_filter daily">Morning</div>
+            <div class="daily_filter weekly">Afternoon</div>
+            <div class="daily_filter monthly">Evening</div>
+          </div>
+        </div>
+        <div class="habit_end">
+          <h4 class="habit_end_title">End Habit on</h4>
+          <input type="checkbox" name="habit end" id="habit_turn" />
+        </div>
+        <div class="reminder">
+          <h4 class="reminder_title">Set Reminder</h4>
+          <input type="checkbox" name="reminder" id="reminder_turn" />
+        </div>
+      </div>
+      <div class="save_btn">Save</div>
+    </section>
+  </body>
 </html>
