--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+
     <link rel="stylesheet" href="styles/main.css" />
     <script src="scripts/main.js" defer></script>
     <title>Habit Tracker</title>
@@ -20,7 +22,7 @@
   <body>
     <section class="create_new_habit">
       <div class="habit_header">
-        <span class="material-symbols-outlined"> close </span>
+        <span class="material-symbols-outlined close_icon"> close </span>
         <h1 class="create_habit">Create New Habit</h1>
       </div>
       <div class="habit_properties_container">
@@ -34,37 +36,43 @@
           />
         </div>
         <div class="icon_collection">
-          <div class="icons_header">
-            <h4 class="icons_title">Icon</h4>
-            <p class="all_icons">View All</p>
+          <div class="icon_header">
+            <h4 class="icon_title">Icon</h4>
+            <p class="all_icons">
+              View All
+              <span class="material-symbols-outlined arrow_icon">
+                arrow_right_alt
+              </span>
+            </p>
           </div>
-          <div class="color_grid">
-            <span class="icon_item"></span>
-            <span class="icon_item"></span>
-            <span class="icon_item"></span>
-            <span class="icon_item"></span>
-            <span class="icon_item"></span>
+          <div class="icon_line">
+            <span class="icon_item">&#128540</span>
+            <span class="icon_item">&#128512</span>
+            <span class="icon_item">&#128514</span>
+            <span class="icon_item">&#128515</span>
+            <span class="icon_item">&#128520</span>
           </div>
         </div>
         <div class="color_collection">
           <!-- create a color grid 5x3 -->
         </div>
         <div class="repeat_date">
-          <div class="time_header">
+          <div class="repeat_header">
             <h4 class="repeat_title">Repeat</h4>
           </div>
-          <div class="time_filter_check">
-            <div class="time_filter daily">Daily</div>
-            <div class="time_filter weekly">Weekly</div>
-            <div class="time_filter monthly">Monthly</div>
+          <div class="repeat_filter_check">
+            <div class="repeat_filter daily">Daily</div>
+            <div class="repeat_filter weekly">Weekly</div>
+            <div class="repeat_filter monthly">Monthly</div>
           </div>
         </div>
         <div class="specific_days">
-          <div class="days">
+          <div class="days_header">
             <h4 class="days_title">On these day</h4>
             <div class="days_check">
               <p>All day</p>
-              <input type="checkbox" name="All day" id="" />
+              <input type="checkbox" checked name="All day" id="all_day_check" />
+              <div class="all_day_chek"></div>
             </div>
           </div>
           <div class="week_days">
@@ -82,21 +90,21 @@
             <h4 class="daily_times_title">Do it at:</h4>
           </div>
           <div class="daily_filter_check">
-            <div class="daily_filter daily">Morning</div>
-            <div class="daily_filter weekly">Afternoon</div>
-            <div class="daily_filter monthly">Evening</div>
+            <div class="daily_filter morning">Morning</div>
+            <div class="daily_filter afternoon">Afternoon</div>
+            <div class="daily_filter evening">Evening</div>
           </div>
         </div>
         <div class="habit_end">
           <h4 class="habit_end_title">End Habit on</h4>
-          <input type="checkbox" name="habit end" id="habit_turn" />
+          <input type="checkbox" name="habit end" id="habit__end_check" />
         </div>
-        <div class="reminder">
-          <h4 class="reminder_title">Set Reminder</h4>
-          <input type="checkbox" name="reminder" id="reminder_turn" />
+        <div class="set_reminder">
+          <h4 class="set_reminder_title">Set Reminder</h4>
+          <input type="checkbox" name="reminder" id="set_reminder_check" />
         </div>
+        <div class="save_btn">Save</div>
       </div>
-      <div class="save_btn">Save</div>
     </section>
   </body>
 </html>
