working on a checkbox

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h4 class="days_title">On these day</h4>
             <div class="days_check">
               <p>All day</p>
-              <input type="checkbox" checked name="All day" id="all_day_check" />
+              <input type="checkbox" name="All day" id="all_day_check" />
               <div class="all_day_chek"></div>
             </div>
           </div>
