working on toggle button

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <div class="specific_days">
           <div class="days_header">
             <h4 class="days_title">On these day</h4>
-            <div class="days_check">
+            <label class="days_check">
               <p>All day</p>
               <input type="checkbox" name="All day" id="all_day_check" />
               <div class="all_day_chek"></div>
-            </div>
+            </label>
           </div>
           <div class="week_days">
             <span class="Sun each_day">S</span>
@@ -95,14 +95,18 @@
             <div class="daily_filter evening">Evening</div>
           </div>
         </div>
-        <div class="habit_end">
+        <label class="habit_end">
           <h4 class="habit_end_title">End Habit on</h4>
-          <input type="checkbox" name="habit end" id="habit__end_check" />
-        </div>
-        <div class="set_reminder">
+          <input type="checkbox" name="habit end" id="habit_end_check" />
+          <div class="habit_end_check"></div>
+
+        </label>
+        <label class="set_reminder">
           <h4 class="set_reminder_title">Set Reminder</h4>
           <input type="checkbox" name="reminder" id="set_reminder_check" />
-        </div>
+          <div class="set_reminder_check"></div>
+
+        </label>
         <div class="save_btn">Save</div>
       </div>
     </section>
