finished color collection/ working on calendar

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
         <div class="color_collection">
           <!-- create a color grid 5x3 -->
+           <h4>Color</h4>
+           <div class="color_collection_grid">
+           </div>
         </div>
         <div class="repeat_date">
           <div class="repeat_header">
