Working on calendar, a bit tricky

--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
             <div class="repeat_filter weekly">Weekly</div>
             <div class="repeat_filter monthly">Monthly</div>
           </div>
+          <div class="repeat_filter_monthly">
+            <div class="calendar_repeat_monthly_days">
+              Every month on
+            </div>
+            <div class="calendar_weeks">
+              <span class="calendar_each_day">Mo</span>
+              <span class="calendar_each_day">Tu</span>
+              <span class="calendar_each_day">We</span>
+              <span class="calendar_each_day">Th</span>
+              <span class="calendar_each_day">Fr</span>
+              <span class="calendar_each_day">Sa</span>
+              <span class="calendar_each_day">Su</span>
+            </div>
+            <div class="calendar_weekly_days"></div>
+          </div>
         </div>
         <div class="specific_days">
           <div class="days_header">
