left the calendar and worked on weekly filter

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             </p>
           </div>
           <div class="icon_line">
-            <span class="icon_item">&#128540</span>
-            <span class="icon_item">&#128512</span>
-            <span class="icon_item">&#128514</span>
-            <span class="icon_item">&#128515</span>
-            <span class="icon_item">&#128520</span>
+            <span class="icon_item selected_focus selected_focus">&#128540</span>
+            <span class="icon_item selected_focus">&#128512</span>
+            <span class="icon_item selected_focus">&#128514</span>
+            <span class="icon_item selected_focus">&#128515</span>
+            <span class="icon_item selected_focus">&#128520</span>
           </div>
         </div>
         <div class="color_collection">
@@ -64,9 +64,9 @@
             <h4 class="repeat_title">Repeat</h4>
           </div>
           <div class="repeat_filter_check">
-            <div class="repeat_filter daily">Daily</div>
-            <div class="repeat_filter weekly">Weekly</div>
-            <div class="repeat_filter monthly">Monthly</div>
+            <div class="repeat_filter selected_focus daily">Daily</div>
+            <div class="repeat_filter selected_focus weekly">Weekly</div>
+            <div class="repeat_filter selected_focus monthly">Monthly</div>
           </div>
           <div class="repeat_filter_monthly">
             <div class="calendar_repeat_monthly_days">
@@ -83,6 +83,20 @@
             </div>
             <div class="calendar_weekly_days"></div>
           </div>
+          <div class="weekly_days_filter">
+            <div class="weekly_days_count_title">
+              X days per week
+            </div>
+            <div class="weekly_days_number">
+              <span class="weekly_days_count selected_focus">1</span>
+              <span class="weekly_days_count selected_focus">2</span>
+              <span class="weekly_days_count selected_focus">3</span>
+              <span class="weekly_days_count selected_focus">4</span>
+              <span class="weekly_days_count selected_focus">5</span>
+              <span class="weekly_days_count selected_focus">6</span>
+              <span class="weekly_days_count selected_focus">7</span>
+            </div>
+          </div>
         </div>
         <div class="specific_days">
           <div class="days_header">
@@ -94,13 +108,13 @@
             </label>
           </div>
           <div class="week_days">
-            <span class="Sun each_day">S</span>
-            <span class="Mon each_day">M</span>
-            <span class="Tue each_day">T</span>
-            <span class="Wed each_day">W</span>
-            <span class="Thu each_day">T</span>
-            <span class="Fri each_day">F</span>
-            <span class="Sat each_day">S</span>
+            <span class="Sun each_day selected_focus">S</span>
+            <span class="Mon each_day selected_focus">M</span>
+            <span class="Tue each_day selected_focus">T</span>
+            <span class="Wed each_day selected_focus">W</span>
+            <span class="Thu each_day selected_focus">T</span>
+            <span class="Fri each_day selected_focus">F</span>
+            <span class="Sat each_day selected_focus">S</span>
           </div>
         </div>
         <div class="daily_times">
@@ -108,9 +122,9 @@
             <h4 class="daily_times_title">Do it at:</h4>
           </div>
           <div class="daily_filter_check">
-            <div class="daily_filter morning">Morning</div>
-            <div class="daily_filter afternoon">Afternoon</div>
-            <div class="daily_filter evening">Evening</div>
+            <div class="daily_filter selected_focus morning">Morning</div>
+            <div class="daily_filter selected_focus afternoon">Afternoon</div>
+            <div class="daily_filter selected_focus evening">Evening</div>
           </div>
         </div>
         <label class="habit_end">
