Feeling like I can't keep up

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
           </div>
           <div class="icon_line">
-            <span class="icon_item selected_focus selected_focus">&#128540</span>
+            <span class="icon_item selected_focus">&#128540</span>
             <span class="icon_item selected_focus">&#128512</span>
             <span class="icon_item selected_focus">&#128514</span>
             <span class="icon_item selected_focus">&#128515</span>
@@ -64,7 +64,7 @@
             <h4 class="repeat_title">Repeat</h4>
           </div>
           <div class="repeat_filter_check">
-            <div class="repeat_filter selected_focus daily">Daily</div>
+            <div class="repeat_filter selected_focus daily active">Daily</div>
             <div class="repeat_filter selected_focus weekly">Weekly</div>
             <div class="repeat_filter selected_focus monthly">Monthly</div>
           </div>
