selecting all days on click

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="material-symbols-outlined close_icon"> close </span>
         <h1 class="create_habit">Create New Habit</h1>
       </div>
-      <div class="habit_properties_container">
+      <form class="habit_properties_container">
         <div class="habit_name">
           <h4>Habit Name</h4>
           <input
@@ -46,11 +46,28 @@
             </p>
           </div>
           <div class="icon_line">
-            <span class="icon_item selected_focus">&#128540</span>
-            <span class="icon_item selected_focus">&#128512</span>
-            <span class="icon_item selected_focus">&#128514</span>
-            <span class="icon_item selected_focus">&#128515</span>
-            <span class="icon_item selected_focus">&#128520</span>
+            <label class="icon_label">
+              <input type="radio" name="iconItem" class="icon_item_input" id="icon_0_item">
+              <span class="icon_item">&#128540</span>
+            </label>
+            <label class="icon_label">
+              <input type="radio" name="iconItem" class="icon_item_input" id="icon_1_item">
+
+              <span class="icon_item">&#128512</span>
+            </label>
+            <label class="icon_label">
+              <input type="radio" name="iconItem" class="icon_item_input" id="icon_2_item">
+
+              <span class="icon_item">&#128514</span>
+            </label>
+            <label class="icon_label">
+              <input type="radio" name="iconItem" class="icon_item_input" id="icon_3_item">
+              <span class="icon_item">&#128515</span>
+            </label>
+            <label class="icon_label">
+              <input type="radio" name="iconItem" class="icon_item_input" id="icon_4_item">
+              <span class="icon_item">&#128520</span>
+            </label>
           </div>
         </div>
         <div class="color_collection">
@@ -64,9 +81,18 @@
             <h4 class="repeat_title">Repeat</h4>
           </div>
           <div class="repeat_filter_check">
-            <div class="repeat_filter selected_focus daily active">Daily</div>
-            <div class="repeat_filter selected_focus weekly">Weekly</div>
-            <div class="repeat_filter selected_focus monthly">Monthly</div>
+            <label class=repeat_label">
+              <input type="radio" name="repeatItem" class="repeat_filter_input" id="repeat_daily_filter">
+              <div class="repeat_filter daily active">Daily</div>
+            </label>
+            <label class=repeat_label">
+              <input type="radio" name="repeatItem" class="repeat_filter_input" id="repeat_weekly_filter">
+              <div class="repeat_filter weekly">Weekly</div>
+            </label>
+            <label class=repeat_label">
+              <input type="radio" name="repeatItem" class="repeat_filter_input" id="repeat_monthly_filter">
+              <div class="repeat_filter monthly">Monthly</div>
+            </label>
           </div>
           <div class="repeat_filter_monthly">
             <div class="calendar_repeat_monthly_days">
@@ -88,33 +114,56 @@
               X days per week
             </div>
             <div class="weekly_days_number">
-              <span class="weekly_days_count selected_focus">1</span>
-              <span class="weekly_days_count selected_focus">2</span>
-              <span class="weekly_days_count selected_focus">3</span>
-              <span class="weekly_days_count selected_focus">4</span>
-              <span class="weekly_days_count selected_focus">5</span>
-              <span class="weekly_days_count selected_focus">6</span>
-              <span class="weekly_days_count selected_focus">7</span>
+              <span class="weekly_days_count">1</span>
+              <span class="weekly_days_count">2</span>
+              <span class="weekly_days_count">3</span>
+              <span class="weekly_days_count">4</span>
+              <span class="weekly_days_count">5</span>
+              <span class="weekly_days_count">6</span>
+              <span class="weekly_days_count">7</span>
             </div>
           </div>
         </div>
         <div class="specific_days">
           <div class="days_header">
             <h4 class="days_title">On these day</h4>
-            <label class="days_check">
+            <div class="days_check">
               <p>All day</p>
-              <input type="checkbox" name="All day" id="all_day_check" />
-              <div class="all_day_chek"></div>
-            </label>
+              <label>
+                <input type="checkbox" name="All day" id="all_day_check" class="all_day_check_input"/>
+                <div class="all_day_check"></div>
+              </label>
+            </div>
           </div>
           <div class="week_days">
-            <span class="Sun each_day selected_focus">S</span>
-            <span class="Mon each_day selected_focus">M</span>
-            <span class="Tue each_day selected_focus">T</span>
-            <span class="Wed each_day selected_focus">W</span>
-            <span class="Thu each_day selected_focus">T</span>
-            <span class="Fri each_day selected_focus">F</span>
-            <span class="Sat each_day selected_focus">S</span>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="sun_day" />
+              <span class="Sun each_day">S</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="mon_day"/>
+              <span class="Mon each_day">M</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="tue_day"/>
+              <span class="Tue each_day">T</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="wed_day"/>
+              <span class="Wed each_day">W</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="thu_day"/>
+              <span class="Thu each_day">T</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="fri_day"/>
+              <span class="Fri each_day">F</span>
+            </label>
+            <label class="each_day_label">
+              <input type="checkbox" name="eachDay" class="eah_day_input" id="sat_day"/>
+              <span class="Sat each_day">S</span>
+            </label>
           </div>
         </div>
         <div class="daily_times">
@@ -122,23 +171,37 @@
             <h4 class="daily_times_title">Do it at:</h4>
           </div>
           <div class="daily_filter_check">
-            <div class="daily_filter selected_focus morning">Morning</div>
-            <div class="daily_filter selected_focus afternoon">Afternoon</div>
-            <div class="daily_filter selected_focus evening">Evening</div>
+            <label class=daily_filter_label">
+              <input type="radio" name="dailyFilterItem" class="daily_filter_input" id="daily_morning_filter">
+              <div class="daily_filter morning">Morning</div>
+            </label>
+            <label class=daily_filter_label">
+              <input type="radio" name="dailyFilterItem" class="daily_filter_input" id="daily_afternoon_filter">
+              <div class="daily_filter afternoon">Afternoon</div>
+            </label>
+            <label class=daily_filter_label">
+              <input type="radio" name="dailyFilterItem" class="daily_filter_input" id="daily_evening_filter">
+              <div class="daily_filter evening">Evening</div>
+            </label>
           </div>
         </div>
-        <label class="habit_end">
+        <div class="habit_end">
           <h4 class="habit_end_title">End Habit on</h4>
-          <input type="checkbox" name="habit end" id="habit_end_check" />
-          <div class="habit_end_check"></div>
-        </label>
-        <label class="set_reminder">
+          <label>
+            <input type="checkbox" name="habit end" id="habit_end_check" />
+            <div class="habit_end_check"></div>
+          </label>
+        </div>
+        <div class="set_reminder">
           <h4 class="set_reminder_title">Set Reminder</h4>
-          <input type="checkbox" name="reminder" id="set_reminder_check" />
-          <div class="set_reminder_check" ></div>
-        </label>
+          <label>
+
+            <input type="checkbox" name="reminder" id="set_reminder_check" />
+            <div class="set_reminder_check" ></div>
+          </label>
+        </div>
         <div class="save_btn">Save</div>
-      </div>
+      </form>
     </section>
   </body>
 </html>
