selecting all days on click

--- a/index.html
+++ b/index.html
@@ -137,31 +137,31 @@
           </div>
           <div class="week_days">
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="sun_day" />
+              <input type="checkbox" name="eachDay" class="each_day_input" id="sun_day" />
               <span class="Sun each_day">S</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="mon_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="mon_day"/>
               <span class="Mon each_day">M</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="tue_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="tue_day"/>
               <span class="Tue each_day">T</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="wed_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="wed_day"/>
               <span class="Wed each_day">W</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="thu_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="thu_day"/>
               <span class="Thu each_day">T</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="fri_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="fri_day"/>
               <span class="Fri each_day">F</span>
             </label>
             <label class="each_day_label">
-              <input type="checkbox" name="eachDay" class="eah_day_input" id="sat_day"/>
+              <input type="checkbox" name="eachDay" class="each_day_input" id="sat_day"/>
               <span class="Sat each_day">S</span>
             </label>
           </div>
